--- a/personalcalculator.html
+++ b/personalcalculator.html
@@ -4,6 +4,7 @@
 <title>Personal Calculator</title>
 </head>
 <body>
+<link rel='stylesheet' href='color.css' type='text/css' />
 <script src="jsfunctions.js"></script>
 <center>
     <form name="calc">
