--- a/Anagram.html
+++ b/Anagram.html
@@ -2,7 +2,7 @@
 <body>
 <link rel='stylesheet' href='color.css' type='text/css' />
 <script src="jsfunctions.js"></script>
-<h1>STRING VALIDATIONS </h1>
+<h1>Palindrome and Anagram Validations </h1>
 	<form onsubmit="return Palindrome_check()">
 		Enter Palindrome string:<input id="text2" placeholder="Palindrome" type="text"/><br>
 		<button type="button" id="hey" onclick="getElementById('demo1').innerHTML=Palindrome_check();">Submit</button>
