--- a/Game.html
+++ b/Game.html
@@ -3,6 +3,7 @@
 <head>
 </head>
 <body>
+ <h2>Please follow the instructions metioned in the buttons</h2>
 <link rel='stylesheet' href='color.css' type='text/css' />
 <script src="jsfunctions.js"></script>
 <button onclick="round1()">Click here to generate randomFirst Number</button>:<input type="text" id="g1"><br>
