--- a/Anagram.html
+++ b/Anagram.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<link rel='stylesheet' href='color.css' type='text/css' />
+<link rel='stylesheet' href='color1.css' type='text/css' />
 <script src="jsfunctions.js"></script>
 <h1>Palindrome and Anagram Validations </h1>
 	<form onsubmit="return Palindrome_check()">
