--- a/Game.html
+++ b/Game.html
@@ -4,7 +4,7 @@
 </head>
 <body>
  <h2>Please follow the instructions metioned in the buttons</h2>
-<link rel='stylesheet' href='color.css' type='text/css' />
+<link rel='stylesheet' href='color2.css' type='text/css' />
 <script src="jsfunctions.js"></script>
 <button onclick="round1()">Click here to generate randomFirst Number</button>:<input type="text" id="g1"><br>
 <button onclick="round2()">Click here to generate Second Number</button>:<input type="text" id="g2"><br>
