--- a/information.html
+++ b/information.html
@@ -6,7 +6,7 @@
 <script src="jsfunctions.js"></script>
 </head>
 <body>
-        <link rel='stylesheet' href='color.css' type='text/css' />
+        <link rel='stylesheet' href='color3.css' type='text/css' />
 	<h1>Enter the following details</h1>
 	<form>
 		Name:<input id="text2" placeholder="Name" type="text"/><br>
